# american-dream-phone

./: .gitignore  README.md  bot.py  bot_helper.py  bot_runner.py  env.example  pyproject.toml  requirements.txt  server.py  test_calls.sh
frontend/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
prompts/: human_conversation_system_instruction.txt  vm_001_hr1.txt  voicemail_detection_system_instruction.txt  voicemail_system_instruction.txt
resources/: resources.txt
